--- a/src/app/components/post/post-form/_ngx-editor.scss
+++ b/src/app/components/post/post-form/_ngx-editor.scss
@@ -2,28 +2,33 @@
     .mat-dialog-container {
         overflow: hidden;
         background-color: rgb(24 28 31);
+        @media screen and (max-width: 430px) {
+            padding: 24px 10px;
+        }
+    }
+    .cdk-global-overlay-wrapper {
+        #cdk-overlay-0 {
+            @media screen and (max-width: 430px) {
+                max-width: 90vw !important;
+            }
+        }
     }
     .NgxEditor {
-        background-color: rgb(24 28 31) !important;
-        border: 1px solid #374151 !important;
-
         &__MenuBar {
             background-color: rgb(24 28 31) !important;
-            border: 1px solid #374151;
+            // border: 1px solid #374151;
             color: rgb(162, 169, 185);
             flex-wrap: wrap;
         }
         &__Content {
-            min-height: 40px;
-            max-height: 190px;
+            min-height: 80px;
+            max-height: 1px;
             line-height: 24px;
             font-weight: 400;
             font-size: 16px;
-           
+            background-color: rgb(24 28 31);
             font-family: "Open Sans", sans-serif;
             color: rgb(162, 169, 185);
-            border-radius: 4px;
-            border-width: 1px;
             overflow-y: auto;
         }
         &__Seperator {
@@ -40,6 +45,12 @@
             svg {
                 fill: rgb(162, 169, 185);
             }
+            @media screen and (max-width: 801px) {
+                &.NgxEditor__MenuItem--Icon {
+                    height: 27px !important;
+                    width: 27px !important;
+                }
+            }
         }
         &__Popup {
             background-color: rgb(45, 50, 58) !important;
@@ -51,6 +62,11 @@
                 border: 1px solid rgb(43, 46, 57);
                 color: rgb(52, 109, 219) !important;
             }
+            @media screen and (max-width: 801px) {
+                &--Text:after {
+                    margin-left: 3px !important;
+                }
+            }
         }
         &__Dropdown--Item {
             background-color: rgb(24 28 31);
@@ -59,10 +75,5 @@
                 border: 1px solid rgb(52, 109, 219);
             }
         }
-        &__Wrapper{
-            max-width: 700px;
-        }
     }
 }
-
-
