--- a/src/app/components/post/views/post-view-main/post-view.component.html
+++ b/src/app/components/post/views/post-view-main/post-view.component.html
@@ -6,9 +6,8 @@
       <span class="author-name">{{user.firstName}} {{user.lastName}}</span>
       <span class="data-creation">{{post.dateCreation | timeAgo}}</span>
       <span class="reading-time">{{post.content|readingTime}}</span>
-      <span class="category"> Category: {{post.category}}</span>
+      <span class="category">Category: {{post.category}} {{post.subcategory}}</span>
     </div>
-    <!-- <mat-divider class="mat-divider"></mat-divider> -->
     <div class="content" [innerHTML]="post.content | sanitizeHtml"></div>
   </div>
 </div>
