--- a/src/app/components/post/views/post-view-main/post-view.component.scss
+++ b/src/app/components/post/views/post-view-main/post-view.component.scss
@@ -24,7 +24,7 @@
     word-break: break-word;
     font-weight: 400;
     word-wrap: break-word;
-    font-family: 'Tinos', serif;
+    font-family: "Tinos", serif;
 }
 
 p {
@@ -45,7 +45,7 @@ p {
     font-style: normal;
     line-height: 1.23;
     letter-spacing: 0;
-    font-family: 'Arimo', sans-serif;
+    font-family: "Arimo", sans-serif;
     line-height: 56px;
     font-size: 46px;
 }
@@ -65,19 +65,32 @@ a {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     color: rgb(162, 169, 185);
     line-height: 20px;
     font-size: 14px;
-    font-family: 'Arimo', sans-serif;
+    font-family: "Arimo", sans-serif;
     font-weight: 400;
     .category {
         display: block;
         margin-left: auto;
+        margin-right: 4px;
         padding-left: 10px;
+        @media screen and (max-width: 615px) {
+            margin-left: 0px;
+            margin-right: 0px;
+            padding-left: 0px;
+            margin-top: 10px;
+            width: 100%;
+            text-align: left;
+        }
+        @media screen and (max-width: 546px) {
+           
+        }
     }
     .reading-time,
     .data-creation {
-        padding: 0px 14px;
+        padding: 0px 10px;
         letter-spacing: -0.003em;
         word-spacing: -0.001em;
     }
@@ -99,4 +112,18 @@ a {
         font-weight: 700;
         padding: 0px 16px 0px 4px;
     }
+    @media screen and (max-width: 424px) {
+        .author-name {
+            text-align: start;
+            width: 70%;
+        }
+        .author-icon,.author-name {
+            margin-bottom: 10px;
+        }
+        .data-creation{
+            padding: 0px;
+            padding-right: 10px;
+        }
+    }
 }
+
