refactored components with posts and forms for posts

--- a/src/app/components/post/user-posts/user-posts.component.html
+++ b/src/app/components/post/user-posts/user-posts.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <div class="container" *ngIf="!userHasNoPosts && !isLoading">
+  <div class="container" *ngIf="!userHasNoPosts && !isLoading && postInFocus">
     <div class="navigation-group">
       <div class="navigation-group-posts">
         <div *ngFor="let post of posts" class="navigation-group__item">
@@ -19,7 +19,7 @@
                 <mat-icon>more_vert</mat-icon>
               </button>
               <mat-menu class="mat-menu" #menu="matMenu">
-                <button (click)="toogleIsEdit(true)" mat-menu-item class="mat-menu__item">
+                <button (click)="editPost(post)" mat-menu-item class="mat-menu__item">
                   <mat-icon class="mat-icon">
                     edit_note
                   </mat-icon>
@@ -31,7 +31,7 @@
                   </mat-icon>
                   <span>Delete</span>
                 </button>
-                <button mat-menu-item class="mat-menu__item" (click)="toggleVisibility(post)">
+                <button mat-menu-item class="mat-menu__item" (click)="togglePostVisibility(post)">
                   <mat-icon *ngIf="post.isVisible" class="mat-icon">
                     visibility_off
                   </mat-icon>
@@ -55,31 +55,28 @@
       </button>
     </div>
     <div class="content-group">
-      <div class="content-group-post-field">
-        <app-post-view *ngIf="!isEdit" [post]="postInFocus" [user]="currentUser"></app-post-view>
-        <app-post-form *ngIf="isEdit" [post]="postInFocus" (postSaved)="postSaved($event)"></app-post-form>
-        <div class="content-group-navigation">
-          <div class="btn-group">
-            <button *ngIf="postInFocusPosition !== 0" (click)="prevPost()"
-              [ngClass]="{'btn-group__item': true,'btn-prev':postInFocusPosition !== posts.length - 1}">
-              <mat-icon class="btn-prev__icon">arrow_back</mat-icon>
-              <span>Previous</span>
-            </button>
-            <button *ngIf="postInFocusPosition !== posts.length - 1" (click)="nextPost()"
-              [ngClass]="{'btn-group__item': true,'btn-next':postInFocusPosition !== 0}">
-              <span>Next</span>
-              <mat-icon class="btn-next__icon">arrow_forward</mat-icon>
-            </button>
+      <app-post-view [post]="postInFocus" [user]="currentUser"></app-post-view>
+      <div class="content-group-navigation">
+        <div class="btn-group">
+          <button *ngIf="postInFocusPosition !== 0" (click)="prevPost()"
+            [ngClass]="{'btn-group__item': true,'btn-prev':postInFocusPosition !== posts.length - 1}">
+            <mat-icon class="btn-prev__icon">arrow_back</mat-icon>
+            <span>Previous</span>
+          </button>
+          <button *ngIf="postInFocusPosition !== posts.length - 1" (click)="nextPost()"
+            [ngClass]="{'btn-group__item': true,'btn-next':postInFocusPosition !== 0}">
+            <span>Next</span>
+            <mat-icon class="btn-next__icon">arrow_forward</mat-icon>
+          </button>
+        </div>
+        <mat-divider class="mat-divider"></mat-divider>
+        <div class="time" *ngIf="postInFocus">
+          <div class="time-icon">
+            <mat-icon>
+              hourglass_empty
+            </mat-icon>
           </div>
-          <mat-divider class="mat-divider"></mat-divider>
-          <div class="time">
-            <div class="time-icon">
-              <mat-icon>
-                hourglass_empty
-              </mat-icon>
-            </div>
-            <p>Last modified {{postInFocus.dateLastModification | timeAgo}}</p>
-          </div>
+          <p>Last modified {{postInFocus.dateLastModification | timeAgo}}</p>
         </div>
       </div>
     </div>
