--- a/src/app/components/post/post-form-dialog/_ngx-editor.scss
+++ b/src/app/components/post/post-form-dialog/_ngx-editor.scss
@@ -3,11 +3,11 @@
         overflow: hidden;
         background-color: rgb(24 28 31);
         @media screen and (max-width: 430px) {
-            padding: 24px 10px;
+            padding: 24px 16px;
         }
     }
     .cdk-global-overlay-wrapper {
-        #cdk-overlay-0 {
+        .cdk-overlay-pane {
             @media screen and (max-width: 430px) {
                 max-width: 90vw !important;
             }
@@ -16,7 +16,6 @@
     .NgxEditor {
         &__MenuBar {
             background-color: rgb(24 28 31) !important;
-            // border: 1px solid #374151;
             color: rgb(162, 169, 185);
             flex-wrap: wrap;
         }
