--- a/src/app/components/post/user-posts/user-posts.component.scss
+++ b/src/app/components/post/user-posts/user-posts.component.scss
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     height: 100%;
+    overflow: auto;
 }
 
 .main-container {
@@ -12,7 +13,9 @@
     background-color: #14171c;
     padding: 16px 10px;
     border: 1px solid #374151;
-
+    // @media screen and (max-width: 1200px) {
+    //     display: none;
+    // }
     &__item {
         align-items: center;
         cursor: pointer;
@@ -99,8 +102,18 @@
     border-left: none;
     display: flex;
     flex-direction: column;
+    position: relative;
+
+    // @media screen and (max-width: 1200px) {
+    //     flex-basis: 100%;
+    // }
     &-navigation {
+        padding: 0px 30px;
+        width: 700px;
+        margin: 0 auto;
+
         .time {
+            width: 100%;
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -109,7 +122,7 @@
             font-weight: 500;
             font-size: 14px;
             font-family: "Open Sans", sans-serif;
-        
+
             &-icon {
                 color: #eaf2f7;
                 font-size: 24px;
@@ -119,55 +132,52 @@
                 padding-left: 10px;
             }
         }
-    }
-    &-post-field {
-        width: 700px;
-        margin: 0px auto;
-    }
-    .btn-group {
-        display: flex;
-        flex-direction: row;
-        &__item {
-            display: block;
+        .btn-group {
+            display: flex;
             width: 100%;
-            box-shadow: rgb(0 0 0 / 69%) 0px 1px 2px;
-            margin-bottom: 8px;
-            margin-right: 0px;
-            flex-shrink: 1;
-            flex-grow: 1;
-            flex-basis: 0%;
-            cursor: pointer;
-            background-color: rgb(24, 28, 31);
-            padding: 14px;
-            border-color: rgb(43, 46, 57);
-            border-radius: 4px;
-            border-width: 1px;
-            color: rgb(162, 169, 185);
-            line-height: 24px;
-            font-size: 16px;
-            font-weight: 500;
-            font-family: "Open Sans", sans-serif;
-            position: relative;
-            &:hover {
-                color: rgb(52, 109, 219);
-                border-color: rgb(52, 109, 219);
+            flex-direction: row;
+            &__item {
+                display: block;
+                width: 100%;
+                box-shadow: rgb(0 0 0 / 69%) 0px 1px 2px;
+                margin-bottom: 8px;
+                margin-right: 0px;
+                flex-shrink: 1;
+                flex-grow: 1;
+                flex-basis: 0%;
+                cursor: pointer;
+                background-color: rgb(24, 28, 31);
+                padding: 14px;
+                border-color: rgb(43, 46, 57);
+                border-radius: 4px;
+                border-width: 1px;
+                color: rgb(162, 169, 185);
+                line-height: 24px;
+                font-size: 16px;
+                font-weight: 500;
+                font-family: "Open Sans", sans-serif;
+                position: relative;
+                &:hover {
+                    color: rgb(52, 109, 219);
+                    border-color: rgb(52, 109, 219);
+                }
             }
-        }
-        .btn-prev {
-            margin-right: 6px;
-        }
-        .btn-prev__icon {
-            position: absolute;
-            top: 16px;
-            left: 10px;
-        }
-        .btn-next {
-            margin-left: 6px;
-        }
-        .btn-next__icon {
-            position: absolute;
-            top: 16px;
-            right: 10px;
+            .btn-prev {
+                margin-right: 6px;
+            }
+            .btn-prev__icon {
+                position: absolute;
+                top: 16px;
+                left: 10px;
+            }
+            .btn-next {
+                margin-left: 6px;
+            }
+            .btn-next__icon {
+                position: absolute;
+                top: 16px;
+                right: 10px;
+            }
         }
     }
 }
@@ -240,7 +250,6 @@
     }
 }
 
-
 // ::ng-deep .my-custom-dialog-class {
 //     .mat-dialog-container{
 //         overflow: hidden;
@@ -250,4 +259,3 @@
 //         }
 //     }
 // }
-
