--- a/src/app/components/post/post-form-dialog/_ngx-editor.scss
+++ b/src/app/components/post/post-form-dialog/_ngx-editor.scss
@@ -1,9 +1,9 @@
 ::ng-deep {
     .mat-dialog-container {
-        overflow: hidden;
+        overflow-x: hidden;
         background-color: rgb(24 28 31);
         @media screen and (max-width: 430px) {
-            padding: 24px 16px;
+            padding: 24px 18px;
         }
     }
     .NgxEditor {
