--- a/src/app/components/post/user-posts/user-posts.component.scss
+++ b/src/app/components/post/user-posts/user-posts.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     height: 100%;
     overflow: auto;
+    position: relative;
 }
 
 .main-container {
@@ -13,9 +14,9 @@
     background-color: #14171c;
     padding: 16px 10px;
     border: 1px solid #374151;
-    // @media screen and (max-width: 1200px) {
-    //     display: none;
-    // }
+    @media screen and (max-width: 1200px) {
+        display: none;
+    }
     &__item {
         align-items: center;
         cursor: pointer;
@@ -103,10 +104,8 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    overflow-x: auto;
 
-    // @media screen and (max-width: 1200px) {
-    //     flex-basis: 100%;
-    // }
     &-navigation {
         padding: 0px 30px;
         width: 700px;
@@ -132,52 +131,109 @@
                 padding-left: 10px;
             }
         }
-        .btn-group {
-            display: flex;
-            width: 100%;
-            flex-direction: row;
-            &__item {
-                display: block;
-                width: 100%;
-                box-shadow: rgb(0 0 0 / 69%) 0px 1px 2px;
-                margin-bottom: 8px;
-                margin-right: 0px;
-                flex-shrink: 1;
-                flex-grow: 1;
-                flex-basis: 0%;
-                cursor: pointer;
-                background-color: rgb(24, 28, 31);
-                padding: 14px;
-                border-color: rgb(43, 46, 57);
-                border-radius: 4px;
-                border-width: 1px;
-                color: rgb(162, 169, 185);
-                line-height: 24px;
-                font-size: 16px;
-                font-weight: 500;
-                font-family: "Open Sans", sans-serif;
-                position: relative;
-                &:hover {
-                    color: rgb(52, 109, 219);
-                    border-color: rgb(52, 109, 219);
-                }
-            }
-            .btn-prev {
-                margin-right: 6px;
-            }
-            .btn-prev__icon {
-                position: absolute;
-                top: 16px;
-                left: 10px;
-            }
-            .btn-next {
-                margin-left: 6px;
-            }
-            .btn-next__icon {
-                position: absolute;
-                top: 16px;
-                right: 10px;
-            }
+    }
+
+    @media screen and (max-width: 1200px) {
+        flex-basis: 100%;
+        &-navigation {
+            display: none;
+        }
+    }
+}
+
+.btn-group {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+    &__item {
+        display: block;
+        width: 100%;
+        box-shadow: rgb(0 0 0 / 69%) 0px 1px 2px;
+        margin-bottom: 8px;
+        margin-right: 0px;
+        flex-shrink: 1;
+        flex-grow: 1;
+        flex-basis: 0%;
+        cursor: pointer;
+        background-color: rgb(24, 28, 31);
+        padding: 14px;
+        border-color: rgb(43, 46, 57);
+        border-radius: 4px;
+        border-width: 1px;
+        color: rgb(162, 169, 185);
+        line-height: 24px;
+        font-size: 16px;
+        font-weight: 500;
+        font-family: "Open Sans", sans-serif;
+        position: relative;
+        &:hover {
+            color: rgb(52, 109, 219);
+            border-color: rgb(52, 109, 219);
+        }
+    }
+    .btn-prev {
+        margin-right: 6px;
+    }
+    .btn-prev__icon {
+        position: absolute;
+        top: 16px;
+        left: 10px;
+    }
+    .btn-next {
+        margin-left: 6px;
+    }
+    .btn-next__icon {
+        position: absolute;
+        top: 16px;
+        right: 10px;
+    }
+}
+
+.mat-fab-container {
+    display: none;
+    position: fixed;
+    bottom: 19px;
+    right: 19px;
+    &-settings {
+        bottom: 80px;
+    }
+    @media screen and (max-width: 1200px) {
+            display: block;
+    }
+}
+
+.mobile-navigation-group {
+    display: none;
+    &-next,
+    &-prev {
+        display: block;
+        cursor: pointer;
+        color: rgb(162, 169, 185);
+        font-size: 48px;
+        position: fixed;
+        top: 50%;
+        margin-top: -16px;
+        &:hover {
+            color: rgb(52, 109, 219);
+        }
+    }
+    @media screen and (max-width: 1200px) {
+        display: block;
+        &-next {
+            right: 18px;
+        }
+        &-prev {
+            left: 18px;
+        }
+    }
+
+    @media screen and (max-width: 761px) {
+        &-next {
+            right: 6px;
+        }
+        &-prev {
+            left: 6px;
         }
     }
 }
@@ -250,12 +306,3 @@
     }
 }
 
-// ::ng-deep .my-custom-dialog-class {
-//     .mat-dialog-container{
-//         overflow: hidden;
-//         background-color: rgb(24 28 31);
-//         @media screen and (max-width: 430px) {
-//             padding: 24px 10px;
-//         }
-//     }
-// }
