--- a/src/app/components/post/views/post-view-main/post-view.component.scss
+++ b/src/app/components/post/views/post-view-main/post-view.component.scss
@@ -127,3 +127,10 @@ a {
     }
 }
 
+.mat-icon-visibility_off{
+    display: none;
+    @media screen and (max-width: 1200px) {
+        display: inline-block;
+    }
+}
+
