--- a/src/app/components/role/role-page/role-page.component.scss
+++ b/src/app/components/role/role-page/role-page.component.scss
@@ -1,25 +1,48 @@
+.page {
+  min-height: 100%;
+  background-color: #000;
+  background: linear-gradient(to bottom right, #1f2329, 80%, rgb(94, 166, 233));
+  margin: 0;
+  padding: 0;
+}
 .container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.check-box__group {
-  display: flex;
-  flex-direction: column;
-}
-
-.user {
-  height: auto;
-  width: auto;
-}
-
-.role__form__container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.role__form__btn {
-  margin: 20px 0px;
+.user {
+  height: auto;
+  // width: 1000px;
+  margin-top: 2em;
+  margin-bottom: 2em;
+}
+
+.card {
+  border: 2px solid #3884ff;
+  background-color: #1f2329;
+  // background: linear-gradient(135deg, rgb(0, 109, 112), rgb(31, 35, 41) 13%);
+  // background: linear-gradient(135deg, rgb(94, 166, 233), rgb(31, 35, 41) 75%);
+  color: #fff;
+  width: 45vw;
+}
+
+.create__btn {
+  height: auto;
+  width: 50vw;
+  // margin-top: 1.5em;
+  margin-bottom: 3em;
+  // border: 2px solid #3884ff;
+}
+
+::ng-deep .mat-checkbox-background {
+  background-color: #3884ff;
+  // background-color: #005691;
+  // outline-style: rgb(228, 233, 235) !important;
+}
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+  background-color: #3884ff;
+  // background-color: #005691;
+  border-color: rgb(228, 233, 235) !important;
+  // outline-style: rgb(228, 233, 235) !important;
 }
