--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -47,31 +47,26 @@
             <h1>No posts in this category or sub-category</h1>
           </div>
           <div *ngFor="let post of allPosts" class="example">
-            <mat-card class="example-card" >
+            <mat-card class="example-card" [routerLink]="['/post', post.id]">
               <mat-card-title-group style="flex-direction: column">
-                <mat-card-title style="display: flex; justify-content: space-between">{{post.title}}
-                  <div style="display: flex" *ngIf="!hidenButton">
-                    <button style="background: transparent; border: 0; cursor: pointer"
-                            [hidden]="!isSuperAdmin && !isAdmin"
-                            (click)="editPostForAdmin(post); $event.preventDefault();">
-                      <mat-icon color="accent">edit</mat-icon>
-                    </button>
-                    <button style="background: transparent; border: 0; cursor: pointer"
-                            [hidden]="!isSuperAdmin && !isAdmin"
-                            (click)="deletePostForAdmin(post.id); $event.preventDefault();">
-                      <mat-icon color="warn">delete_outline</mat-icon>
-                    </button>
-                    <button style="background: transparent; border: 0; cursor: pointer"
-                            [routerLink]="['/post', post.id]">
-                      <img src="https://assets-global.website-files.com/600ead1452cf056d0e52dbed/6011b66d7c0cc76dccba5953_external-link.svg" alt="">
-                    </button>
-                  </div>
-                </mat-card-title>
+                <mat-card-title>{{post.title}}</mat-card-title>
                 <mat-card-subtitle class="desc">{{post.category}} </mat-card-subtitle>
               </mat-card-title-group>
               <mat-card-content [innerHTML]="post.content">
               </mat-card-content>
             </mat-card>
+            <div class="post-buttons" *ngIf="!hidenButton">
+              <button style="background: transparent; border: 0; cursor: pointer; z-index: 3;"
+                      [hidden]="!isSuperAdmin && !isAdmin"
+                      (click)="editPostForAdmin(post); $event.preventDefault();">
+                <mat-icon color="accent">edit</mat-icon>
+              </button>
+              <button style="background: transparent; border: 0; cursor: pointer; z-index: 3;"
+                      [hidden]="!isSuperAdmin && !isAdmin"
+                      (click)="deletePostForAdmin(post.id); $event.preventDefault();">
+                <mat-icon color="warn">delete_outline</mat-icon>
+              </button>
+            </div>
           </div>
         </div>
       </div>
