--- a/src/app/components/users/users-page/users-page.component.scss
+++ b/src/app/components/users/users-page/users-page.component.scss
@@ -55,7 +55,7 @@
     .btn {
       margin-left: 7%;
       margin-top: 8px;
-      padding: 10px 20px;
+      padding: 0.5rem;
       border: 2px solid #3884ff;
       border-radius: 6px;
       width: 6rem;
