--- a/src/app/components/users/user-profile/user-profile.component.html
+++ b/src/app/components/users/user-profile/user-profile.component.html
@@ -7,7 +7,6 @@
     tempore rerum libero cupiditate ex numquam blanditiis, consectetur odit
     dicta? Cumque.
   </p>
-
   <div class="info">
     <div class="section">
       <h2>YOUR PERSONAL INFORMATION</h2>
@@ -19,7 +18,6 @@
         dashes cannot be the first character.</span
       >
     </p>
-
     <div class="edit">
       <input
         class="form-control"
@@ -33,14 +31,6 @@
         pattern="[a-zA-ZА-ЩЬЮЯҐЄІЇа-щьюяґєії][a-zA-ZА-ЩЬЮЯҐЄІЇа-щьюяґєії\\-]*"
         #firstName="ngModel"
       />
-
-      <button
-        class="outlined-btn"
-        (click)="updateUser(user.key, 'firstName', user.firstName)"
-        [disabled]="firstName.invalid"
-      >
-        SAVE
-      </button>
     </div>
     <p class="title">
       Last name (Here you can edit data). Please, enter a correct last name.
@@ -49,7 +39,6 @@
         dashes cannot be the first character.</span
       >
     </p>
-
     <div class="edit">
       <input
         class="form-control"
@@ -63,19 +52,20 @@
         pattern="[a-zA-ZА-ЩЬЮЯҐЄІЇа-щьюяґєії][a-zA-ZА-ЩЬЮЯҐЄІЇа-щьюяґєії\\-]*"
         #lastName="ngModel"
       />
-
+    </div>
+    <div class="edit">
       <button
         class="outlined-btn"
-        (click)="updateUser(user.key, 'lastName', user.lastName)"
-        [disabled]="lastName.invalid"
+        id="two"
+        (click)="updateUserNow(user.key, user)"
+        [disabled]="lastName.invalid || firstName.invalid"
       >
         SAVE
       </button>
     </div>
   </div>
-
-  <div class="info" id="info">
-    <div class="section" id="section">
+  <div class="info">
+    <div class="section">
       <h2>LOGIN DETAILS</h2>
     </div>
     <p class="title">
@@ -108,9 +98,10 @@
     </div>
     <p class="title">
       Password (This password you use for login into this site).
-      <span [style.color]="password.errors && (password.dirty || password.touched) ? 'red' : 'grey'"
-        >Enter a correct password (password have to be from 6 to 20
-        characters or numbers).</span
+      <span
+        [style.color]="password.errors && (password.dirty || password.touched) ? 'red' : 'grey'"
+        >Enter a correct password (password have to be from 6 to 20 characters
+        or numbers).</span
       >
     </p>
     <div class="edit">
@@ -137,7 +128,6 @@
       </button>
     </div>
   </div>
-
   <div class="info" id="info-block">
     <div class="section" id="section-block">
       <h2>DELETE MY PROFILE</h2>
@@ -156,7 +146,7 @@
         id="block"
         (click)="deleteUserAccount(user.key)"
       >
-        DELETE MY PROFILE
+        DELETE MY PROFILE 
       </button>
     </div>
   </div>
